--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -38,8 +38,14 @@ jobs:
         with:
           channel: 'stable'
 
-      - name: Set up Azure Developer CLI
-        uses: Azure/setup-azd@v1.0.0
+      - name: Set up Azure CLI
+        uses: azure/cli@v2
+        with:
+          inlineScript: |
+            az --version
+
+      - name: Set up azd
+        uses: Azure/setup-azd@v2
 
       - name: Log in to Azure (OIDC)
         uses: azure/login@v1
