--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -65,7 +65,8 @@ jobs:
       - name: Provision Infrastructure
         id: provision_infra # Add an ID to the step to capture outputs
         run: |
-          PROVISION_OUTPUT=$(azd provision --environment ${{ github.event.inputs.environment || 'dev' }} --no-prompt --output json)
+          azd provision --environment ${{ github.event.inputs.environment || 'dev' }} --no-prompt --output json > azd_provision_output.json
+          PROVISION_OUTPUT=$(cat azd_provision_output.json)
           echo "Raw azd provision output: $PROVISION_OUTPUT"
           echo "FRONTEND_STORAGE_ACCOUNT_NAME=$(echo "$PROVISION_OUTPUT" | jq -r '.outputs.FRONTEND_STORAGE_ACCOUNT_NAME.value')" >> $GITHUB_OUTPUT
 
